--- a/templates/katevisauc.html
+++ b/templates/katevisauc.html
@@ -9,7 +9,7 @@
         <img src="static/images/add-button.png" alt="Bilde" width="100" height="100">
     </div>
     <div>
-    <form action="http://127.0.0.1:5000/uzruna" method = "post">
+    <form action="http://127.0.0.1:5000/uzruna" method = "GET">
         <label for="vards">Vārds:</label><br>
         <input type="text" id="vards" name="vards" value=""><br>
         <label for="uzvards">Uzvārds:</label><br>
